Improved naming and documentation